--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <h1>Joseph Corrado</h1>
         <nav>
             <ul>
-                <li>
-                    <a href="#">About Me</a>
+                <li class="nav-link">
+                    <a href="#" >About Me</a>
                 </li>
-                <li>
-                    <a href="#">Work</a>
+                <li class="nav-link">
+                    <a href="#" >Work</a>
                 </li>
-                <li>
-                    <a href="#">Contact Me</a>
+                <li class="nav-link">
+                    <a href="#" >Contact Me</a>
                 </li>
-                <li>
+                <li class="nav-link">
                     <a href="#">Resume</a>
                 </li>
             </ul>
