[+]Background image file, code, and style added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     
-    <div class="bkgr">background image and added caption box here</div>
+    <div class="bkgr"></div>
     
     <main>
 
