[+]Placeholders and base styles applied

--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
         <nav>
             <ul>
                 <li class="nav-link">
-                    <a href="#about" >About Me</a>
+                    <a href="#about-title" >About Me</a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">Work</a>
+                    <a href="#work-title">Work</a>
                 </li>
                 <li class="nav-link">
-                    <a href="#" >Contact Me</a>
-                </li>
-                <li class="nav-link">
-                    <a href="#">Resume</a>
+                    <a href="#contact-title" >Contact Me</a>
                 </li>
             </ul>
         </nav>
@@ -56,9 +53,30 @@
         <div class="work">
             <h2 id="work-title">Work</h2>
             <div class="separator"></div>
-            <span>
-                
-            </span>
+            <div>
+                <div class="work-1"></div>
+            </div>
+        </div>
+
+        <div class="contact">
+            <h2 id="contact-title">Contact<br>Me</h2>
+            <div class="separator"></div>
+            <div>
+                <ul class="contact-link">
+                    <li>
+                        <a href="#">Phone Number</a>
+                    </li>
+                    <li>
+                        <a href="#">Email</a>
+                    </li>
+                    <li>
+                        <a href="#">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="#">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
     </main>
