--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </p>
         </div>
 
+        <!-- Section showing previous work  -->
         <div class="work">
             <h2 id="work-title">Work</h2>
             <div class="separator"></div>
@@ -58,6 +59,7 @@
             </div>
         </div>
 
+        <!-- section for methods of contact -->
         <div class="contact">
             <h2 id="contact-title">Contact<br>Me</h2>
             <div class="separator"></div>
