[+]Positioned work examples & added contact links

--- a/index.html
+++ b/index.html
@@ -54,8 +54,24 @@
         <div class="work">
             <h2 id="work-title">Work</h2>
             <div class="separator"></div>
-            <div>
-                <div class="work-1"></div>
+            <div class="work-group">
+                <div id="work1">
+                    <a target="_blank" href="https://corradoj02.github.io/prework-study-guide/">
+                        <div class="work1"></div>
+                        <h3 id="work-1">Prework Study Guide</h3>
+                    </a>
+                </div>
+            
+                <div id="work2">
+                    <a target="_blank" href="https://corradoj02.github.io/CSS-Code-Snippets/">
+                        <div class="work2"></div>
+                        <h3 id="work-2">CSS Code Snippet Cheatsheet</h3>
+                    </a>
+                </div>
+
+                <div>
+
+                </div>
             </div>
         </div>
 
@@ -69,13 +85,13 @@
                         <a href="#">Phone Number</a>
                     </li>
                     <li>
-                        <a href="#">Email</a>
+                        <a href="mailto: josephcorrado97@gmail.com">Email</a>
                     </li>
                     <li>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/corradoj02">GitHub</a>
                     </li>
                     <li>
-                        <a href="#">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/joseph-corrado-b01319218/">LinkedIn</a>
                     </li>
                 </ul>
             </div>
