[+] Added comments and contact links

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
             <h2 id="work-title">Work</h2>
             <div class="separator"></div>
             <div class="work-group">
+                <!-- Prework Study Guide -->
                 <div id="work1">
                     <a target="_blank" href="https://corradoj02.github.io/prework-study-guide/">
                         <div class="work1"></div>
                         <h3 id="work-1">Prework Study Guide</h3>
                     </a>
                 </div>
-            
+                <!-- CSS Code Snippet Cheatsheat -->
                 <div id="work2">
                     <a target="_blank" href="https://corradoj02.github.io/CSS-Code-Snippets/">
                         <div class="work2"></div>
