--- a/index.html
+++ b/index.html
@@ -50,33 +50,48 @@
             </p>
         </div>
 
-        <!-- Section showing previous work  -->
+        <!-- Section showing previous work/projects  -->
         <div class="work">
             <h2 id="work-title">Work</h2>
             <div class="separator"></div>
             <div class="work-group">
+
                 <!-- Prework Study Guide -->
-                <div id="work1">
+                <div>
                     <a target="_blank" href="https://corradoj02.github.io/prework-study-guide/">
                         <div class="work1"></div>
                         <h3 id="work-1">Prework Study Guide</h3>
                     </a>
                 </div>
+
                 <!-- CSS Code Snippet Cheatsheat -->
-                <div id="work2">
+                <div>
                     <a target="_blank" href="https://corradoj02.github.io/CSS-Code-Snippets/">
                         <div class="work2"></div>
                         <h3 id="work-2">CSS Code Snippet Cheatsheet</h3>
                     </a>
                 </div>
 
+                <!-- First Placeholder for upcoming work -->
                 <div>
-
+                    <a href="http://" target="_blank">
+                        <div class="placeholder1"></div>
+                        <h3 id="placeholder-1">Upcoming Project</h3>
+                    </a>
                 </div>
+
+                <!-- Second Placeholder for upcoming work-->
+                <div>
+                    <a href="http://" target="_blank">
+                        <div class="placeholder2"></div>
+                        <h3 id="placeholder-2">Upcoming Project</h3>
+                    </a>
+                </div>
+
             </div>
         </div>
 
-        <!-- section for methods of contact -->
+        <!-- Methods of contact -->
         <div class="contact">
             <h2 id="contact-title">Contact<br>Me</h2>
             <div class="separator"></div>
