[+]Added placeholder page to placeholder link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <!-- First Placeholder for upcoming work -->
                 <div>
-                    <a href="http://" target="_blank">
+                    <a href="pages/placeholder.html" target="_blank">
                         <div class="placeholder1"></div>
                         <h3 id="placeholder-1">Upcoming Project</h3>
                     </a>
@@ -82,7 +82,7 @@
 
                 <!-- Second Placeholder for upcoming work-->
                 <div>
-                    <a href="http://" target="_blank">
+                    <a href="pages/placeholder.html" target="_blank">
                         <div class="placeholder2"></div>
                         <h3 id="placeholder-2">Upcoming Project</h3>
                     </a>
