--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
             <div>
                 <ul class="contact-link">
                     <li>
-                        <a href="#">Phone Number</a>
+                        <a target="_blank" href="#">Phone Number</a>
                     </li>
                     <li>
-                        <a href="mailto: josephcorrado97@gmail.com">Email</a>
+                        <a target="_blank" href="mailto: josephcorrado97@gmail.com">Email</a>
                     </li>
                     <li>
-                        <a href="https://github.com/corradoj02">GitHub</a>
+                        <a target="_blank" href="https://github.com/corradoj02">GitHub</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/joseph-corrado-b01319218/">LinkedIn</a>
+                        <a target="_blank" href="https://www.linkedin.com/in/joseph-corrado-b01319218/">LinkedIn</a>
                     </li>
                 </ul>
             </div>
