[+]Replaced lorem ipsum about me content

--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
             <h2 id="about-title">About Me</h2>
             <div class="separator"></div>
             <p id="about">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora atque fugiat, quidem fuga, blanditiis mollitia maiores fugit ea consectetur, 
-                omnis voluptate animi earum ipsam ab id delectus cupiditate neque ipsa.
-                Architecto quos sequi praesentium nesciunt eligendi error repellat doloribus! Numquam, soluta obcaecati quas eveniet, qui vero quibusdam totam 
-                repellat eum consequatur nobis odio accusamus asperiores, deserunt quo? Tempora, corporis ut!
-                Alias itaque dolore odio iste assumenda ab minima saepe illo? Exercitationem obcaecati esse quidem commodi eum. Dolores harum distinctio eum 
-                repellendus voluptas quasi quisquam, reiciendis soluta, aut optio officia expedita.
-                Eum vel fugiat reprehenderit dicta praesentium, voluptatem itaque tenetur nulla, ipsam omnis necessitatibus a! Pariatur quisquam unde, magni 
-                placeat quasi adipisci delectus quos nobis magnam cum velit, nihil illum ab.
-                Eum delectus enim facere harum? Vero aspernatur obcaecati cupiditate blanditiis, in a ab est illo veritatis voluptate aut odit, dolorem nihil 
-                corrupti officia deleniti ipsa voluptates quia sunt eaque earum.
+                <span>My name is Joseph Corrado;</span><br> I mainly just go by "Joe". I am an aspiring software developer who thoroughly enjoys challenges and solving problems. 
+                I grew up around loving everything tech. I would break and dissect everything electronic/electrical in nature, then fix it or put it all back together to further my understanding of it.
+                I was building desktops and repairing laptops at age 8, and by the time I graduated high school I was configuring and troubleshooting Cisco routers and switches.
+                I've decided to pursue a career in software because of its technical and challenging nature. I'm using this site as a portfolio to demonstrate my past and present projects.
+                I hope to connect and collaborate with whomever is interested and build (maybe even fix) a lot of great things!
             </p>
         </div>
 
