[+]Added weather app and fixed comments

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
                     </a>
                 </div>
 
-                <!-- First Placeholder for upcoming work -->
+                <!-- Weather app -->
                 <div>
-                    <a href="https://corradoj02.github.io/Movie-Mood/" target="_blank">
+                    <a href="https://corradoj02.github.io/Weather-Dashboard/" target="_blank">
                         <div class="work3"></div>
-                        <h3 id="work3">Mood Movie</h3>
+                        <h3 id="work-3">Mood Movie</h3>
                     </a>
                 </div>
-
-                <!-- Second Placeholder for upcoming work-->
+                
+                <!-- Mood Movie project-->
                 <div>
-                    <a href="pages/placeholder.html" target="_blank">
-                        <div class="placeholder2"></div>
-                        <h3 id="placeholder-2">Upcoming Project</h3>
+                    <a href="https://corradoj02.github.io/Movie-Mood/" target="_blank">
+                        <div class="work4"></div>
+                        <h3 id="work-4">Upcoming Project</h3>
                     </a>
                 </div>
 
