[+]Fixed project names

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div>
                     <a href="https://corradoj02.github.io/Weather-Dashboard/" target="_blank">
                         <div class="work3"></div>
-                        <h3 id="work-3">Mood Movie</h3>
+                        <h3 id="work-3">Weather App</h3>
                     </a>
                 </div>
                 
@@ -79,7 +79,7 @@
                 <div>
                     <a href="https://corradoj02.github.io/Movie-Mood/" target="_blank">
                         <div class="work4"></div>
-                        <h3 id="work-4">Upcoming Project</h3>
+                        <h3 id="work-4">Mood Movie</h3>
                     </a>
                 </div>
 
